--- a/deploy-envs/prod-env/deployment.yaml
+++ b/deploy-envs/prod-env/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: awanmbandi/adservice:latest
+        image: gasaba02/adservice:latest
         ports:
         - containerPort: 9555
         env:
