--- a/deploy-envs/prod-env/deployment.yaml
+++ b/deploy-envs/prod-env/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: awanmbandi/cartservice:latest
+        image: gasaba02/cartservice:latest
         ports:
         - containerPort: 7070
         env:
